overflow issue

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body{
 }
 
   .maincontainer{
+    overflow: auto;
     position: absolute;
     width: 75%;
     height: 75vh;
